<package>
  <name>bep_tpcw</name>
  <version>0.0.0</version>
  <description>
     bep_tpcw
  </description>
  <maintainer email="t.p.c.wester@student.tue.nl">Thijs Wester</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>wire_msgs</build_depend>
  <build_depend>problib</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>wire_msgs</run_depend>
  <run_depend>problib</run_depend>
    
</package>


